# mobux

./: .containerignore  .envrc.example  .gitignore  AGENTS.md  Cargo.toml  Containerfile  Makefile  README.md  cliff.toml  context.txt  node_modules  package-lock.json  package.json  playwright.config.cjs  release-plz.toml
.github/workflows/: ci.yml
docs/: twa-push-implementation-plan.md
patches/: xterm-composition-helper.patch
scripts/: build-chime.py  podman-entrypoint.sh
src/: db.rs  main.rs  push.rs  shell_integration.rs  ssl.rs  tmux.rs
test/: smoke.cjs  smoke.spec.cjs
test-results/: .last-run.json
twa/: init.js  twa-manifest.json.template
web/: build.js
web/src/: xterm-entry.js
web/static/: aceterm-globals-entry.js  chime.js  index.js  input-bar.js  input.js  manifest.json  push.js  reader-view.js  scroll.js  settings-theme.js  settings.js  shell-integration.js  style.css  sw.js  term-tokenizer.js  terminal-core.js  terminal.js  themes.js  touch.js
