[package]
name = "mobux"
version = "0.1.0"
edition = "2021"
description = "A touch-friendly tmux web UI for unhinged people who run terminal sessions from their phone while walking the dog"
license = "MIT"
repository = "https://github.com/mvhenten/mobux"
homepage = "https://github.com/mvhenten/mobux"
readme = "README.md"
keywords = ["tmux", "terminal", "mobile", "web", "tui"]
categories = ["command-line-utilities", "web-programming"]
exclude = ["target/"]

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws", "json"] }
base64 = "0.22"
futures-util = "0.3"
html-escape = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
portable-pty = "0.8"
rand = "0.9"
rcgen = "0.13"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pki-types = "1"
rustls-pemfile = "2"
hostname = "0.4"
chrono = "0.4.44"
